# python-project-lvl2

./: .gitignore  Makefile  README.md  engine.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml  pyci.yml
__fixtures__/: test.txt
gendiff/: __init__.py  generate_diff.py
gendiff/data/: file02.json
gendiff/formatters/: __init__.py  format_diff.py  json.py  jsonish.py  plain.py  stylish.py
gendiff/gendiff/: gendiff.py
gendiff/scripts/: gendiff.py
gendiff/src/: comparators.py  format_diff.py  formatters.py  gendiff.py  gendiff_help.py  parsers.py
gendiff/src/formatters/: json.py  plain.py  stylish.py
gendiff/tools/: comparators.py  gendiff.py  gendiff_help.py  parse.py  parsers.py
tests/: test_files.py  test_gendiff.py  test_generate_diff.py
tests/fixtures/: file_after.json
