[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "Study package made on Hexlet Project #2 in Python programmer profession with files comparing in CLI"
authors = ["Ivan Vekhov <ivekhov@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'