[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ivekhov <ivekhov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.1.2"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
isort = "4.3.5"
flake8 = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'