[tool.poetry]
name = "hexlet-code"
version = "2.0.0"
description = ""
authors = ["ivekhov <ivekhov@gmail.com>"]
packages = [
    {include = "gendiff"},
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.0"
pyyaml = "^6.0.1"
pytest-cov = "^5.0.0"

[tool.poetry.dev-dependencies]
isort = "4.3.5"
flake8 = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'
